Distribución de los directorios, configuración final de webppack, implementación de React-router para el manejo de multipages, creación de componentes, contenedores y páginas,  maquetación del LOGIN y generación inicial del mapa de navegación

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,21 +1,27 @@
 /*Botones*/
-.form_combo_btn {
+.item_combo_btn {
     width: 60%;
-    margin: 1rem;
+    margin: 1rem 1rem .5rem 1rem;
 }
 .form_combo_btn_content {
     text-align: center;
-    padding: 1rem 0 0 0;
+    padding: .5rem 0 0 0;
 }
-/*Logo en los formularios*/
+/*Logo PROIDEA en los formularios*/
 .form_logo_content {
     text-align: center;
 }
 .form_logo_style {
     width: 140px;
-    margin: 1rem;
+    margin: .2rem;
 }
+/*Logo U*/
+.form_logou_style {
+    width:80%;
+    margin:1rem auto 0 auto;
+}
+
 /*Label he input*/
-.form_lbl_inpt_groupe {
+.form_lbl_input_groupe {
     margin: 1rem 0 1rem 0;
 }
