--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,7 +1,10 @@
 /*Contenido*/
-.modal-content {
+.modal-register {
     padding: 3%;
 }
 .modal-body {
     padding: 0;
+}
+.modal-recovery {
+    padding: 0 7% 2% 7%;
 }
