--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,16 +1,7 @@
 .home {
     padding-top: 2rem;
+    margin: auto; 
 }
-.video_home {
-    max-width: 20rem;
-    min-width: 1rem;
-    height: 12.5rem;
-    margin: calc(4rem - 16px) 0 calc(4rem - 24px) 0;
-    border-radius: 9px 9px 9px 9px;
-}
-.row_item {
-    margin: 1rem;
-}
-.img {
-    height: 100%;
+.home_module {
+    margin-bottom: 2rem;
 }
