Se corrigen errores en la conversiòn de HTML a JSX, se crea el hook del login usando useRef para poder hacer la validaciòn de los usuarios, se modifican los estilos de las cards

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,15 @@
 .home {
-    padding-top: 2rem;
     margin: auto; 
 }
 .home_module {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+.home_name {
+    margin: 1rem 0 1rem 0;
+    text-align: right;
+    color: #DDDECB;
+    font-size: large;
+}
+.home_name_bold {
+    font-weight: bold;
 }
