--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,3 +13,23 @@
 .home_name_bold {
     font-weight: bold;
 }
+
+.home_exit {
+    text-align: right;
+    margin: 0 12px 0 12px;
+}
+
+.home_exit_button {
+    font-weight: bold;
+    color: #ffff;
+    padding: 1rem;
+    border: none;
+    background-color:rgba(96,96,96,0.5);
+    transition: all 0.5s;
+    border-radius: .5rem;
+}
+
+.home_exit_button:hover {
+    box-shadow: 0px 0px 16px rgba(255,0,0);
+    background-color: rgba(255,0,0);
+  }
