--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,4 +1,4 @@
-.menu_proponent_buton {
+.menu_buton {
     color: #999999;
     background: #ffffff;
     margin: 1rem 0 1rem 0;
@@ -7,7 +7,7 @@
     min-height: 100px;
     transition: all 0.5s;
   }
-  .menu_proponent_buton:hover {
+  .menu_buton:hover {
     box-shadow: 0px 0px 16px #303445;
     border: solid #0076FF 2px;
     color: #0076FF;
