--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,7 +8,7 @@
     max-width: 28rem;
 }
 .home_name {
-    margin: 1rem 0 1rem 0;
+    margin: 1.5rem 0 1.5rem 0;
     text-align: right;
     color: #DDDECB;
     font-size: large;
@@ -58,4 +58,10 @@
     border: solid #999999 2px;
     box-shadow: -4px 4px 68px -10px rgba(0,0,0,0.75);
     margin-bottom: 15px;
+}
+
+
+.table_proyect {
+    max-height:80vh;
+    overflow: auto;  
 }
