se refactoriza todo el documento, se carba el backend con la Apirest usando axios y express para el server con Mysql en la DB, se completa el módulo para mostrar proyecto después de darle clic en la lista

--- a/app_frontend/src/styles/form.css
+++ b/app_frontend/src/styles/form.css
@@ -28,3 +28,14 @@
 .form_block {
     padding: .8rem;
 }
+
+/*Label y label*/
+.form_lbl_lbl_groupe {
+    padding: .2rem;
+    border-radius: .2rem;
+    margin: 1rem 0 0 0;
+    background-color: #E5E5E5;
+}
+.form_block {
+    padding: .8rem;
+}
