--- a/app_frontend/src/styles/global.css
+++ b/app_frontend/src/styles/global.css
@@ -10,6 +10,8 @@ body {
 }
 .card {
     box-shadow: -4px 4px 68px -10px rgba(0,0,0,0.75);
-    color: #606060;
     height: 100%;
 } 
+.card-title{
+    color: #606060;
+}
