--- a/app_frontend/src/styles/home.css
+++ b/app_frontend/src/styles/home.css
@@ -62,6 +62,7 @@
 
 
 .table_proyect {
-    max-height:80vh;
-    overflow: auto;  
+    max-height:60vh;
+    overflow: auto;
+    margin: 10px;  
 }
