--- a/app_frontend/src/styles/home.css
+++ b/app_frontend/src/styles/home.css
@@ -21,10 +21,11 @@
 .session_button{
     display: flex;
     justify-content: flex-end;
+    flex-wrap:wrap;
     padding: 20px 0 0 0;
 }
-.home_exit_button {
-    margin: 0 10px 0 10px;
+.home_session_button {
+    margin: 0 10px 10px 10px;
     min-width: 80px;
     font-weight: bold;
     color: #ffff;
@@ -34,7 +35,21 @@
     transition: all 0.5s;
     border-radius: .2rem;
 }
-
+.home_session_button:hover {
+    box-shadow: 0px 0px 16px rgb(39, 115, 177);
+    background-color:  rgb(69, 99, 125) ;
+  }
+.home_exit_button {
+    margin: 0 10px 10px 10px;
+    min-width: 80px;
+    font-weight: bold;
+    color: #ffff;
+    padding: 1rem;
+    border: none;
+    background-color:rgba(96,96,96,0.5);
+    transition: all 0.5s;
+    border-radius: .2rem;
+}
 .home_exit_button:hover {
     box-shadow: 0px 0px 16px rgba(255,0,0);
     background-color: rgba(255,0,0);
