--- a/app_frontend/src/styles/modal.css
+++ b/app_frontend/src/styles/modal.css
@@ -8,3 +8,9 @@
 .modal-recovery {
     padding: 0 7% 2% 7%;
 }
+.info_group {
+    
+    background-color: #F2F2F2;
+    padding: 10px;
+    border-radius: .5rem;
+}
